[tool.poetry]
name = "Python code to llsp3 file conveter"
version = "0.1.0"
description = ""
authors = ["Takashi Nagai <ngi644@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34"

[tool.poetry.dev-dependencies]
black = "*"  # Pretty formatting of Python code
pynvim = "*" # Allows nvim users to use black formatting

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = false